feat: replace deprecated CrackShot API with updated LeonCS dependencies and refactor code accordingly